samples/_failures_safe/1761124745_09d11b_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_ab72bfc6.c: In function ‘tokenize’:
./samples/SAFE/__tmp_ab72bfc6.c:167:12: error: ‘token’ undeclared (first use in this function); did you mean ‘Token’?
  167 |     return token
      |            ^~~~~
      |            Token
./samples/SAFE/__tmp_ab72bfc6.c:167:12: note: each undeclared identifier is reported only once for each function it appears in
./samples/SAFE/__tmp_ab72bfc6.c:167:17: error: expected ‘;’ at end of input
  167 |     return token
      |                 ^
      |                 ;
./samples/SAFE/__tmp_ab72bfc6.c:167:5: error: expected declaration or statement at end of input
  167 |     return token
      |     ^~~~~~
